[project]
name = "reportlabcustom"
version = "0.1.0"
description = "Section-based PDF/DOCX report generation with headers/footers, conditional formatting, and SVG page backgrounds."
readme = "README.md"
requires-python = ">=3.9,<3.13"  # <- temporarily cap at <3.13
authors = [{ name = "Vairavan Shanmugam" }]
license = { text = "Proprietary" }
keywords = ["reportlab", "docx", "pdf", "reports", "svg", "templates"]

dependencies = [
  "pandas>=2.0,<3.0",
  # remove this if you don't use it:
  "requests>=2.28,<3.0",
]

[project.optional-dependencies]
pdf = [
  "reportlab>=4.1,<5.0",
  "svglib>=1.5,<2.0",
  "pillow>=10.0,<12.0",
]
docx = [
  "python-docx>=1.1.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/<YOUR_GH_USERNAME>/reportlabcustom"
Repository = "https://github.com/<YOUR_GH_USERNAME>/reportlabcustom"

[tool.hatch.build.targets.wheel]
packages = [{ include = "reportlabcustom", from = "src" }]

[tool.hatch.build]
exclude = [
  "/.git", "/.github", "/.vscode", "/tests", "/*.ipynb",
]

# ✅ Correct format: list of strings (not a table)
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
